added storage bin - Manli

--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
@@ -22,6 +22,10 @@
                     <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
                     <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
                 </p:submenu>
+                <p:submenu label="Storage Bin" >
+                    <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+                    <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+                </p:submenu>
             </p:menubar>
             <br/>
         </h:form>
