--- a/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
@@ -27,6 +27,10 @@
                     <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
                     <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
                 </p:submenu>
+                <p:submenu label="Storage Bin" >
+                    <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+                    <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+                </p:submenu>
             </p:menubar>
             <br/>
             <p:panel id="panel" header="Add New Warehouse">
