--- a/MerlionPortal/MerlionPortal-war/web/wms/addstoragebin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addstoragebin.xhtml
@@ -28,7 +28,8 @@
                     <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
                 </p:submenu>
                 <p:submenu label="Storage Bin" >
-                    <p:menuitem value="Add Storage Bin" url="addnewstoragebin.xhtml" />
+                    <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+                    <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
                 </p:submenu>
             </p:menubar>
             <br/>
@@ -45,28 +46,45 @@
 
                     <p:row>
                         <p:column>
-                            <h:outputLabel for="storagetypeId" style="font-weight: bold" value="Storage Type ID:   *" />
+                            <p:outputLabel for="warehouse" value="Warehouse Name: " />
                         </p:column>
                         <p:column>
-                            <p:inputText required="true" label="storagetypeId" requiredMessage="Storage Type ID: is required." id="storagetypeId" value="#{assetManagedBean.storagetypeId}">
-                                <f:validateLength minimum="1" maximum="19" />
-                            </p:inputText>
-                        </p:column>
-                        <p:column>
-                            <p:message for="storagetypeId" />
+                            <p:selectOneMenu id="warehouse" value="#{createStorageBinManagerBean.warehouseId}"  style="width:210px" required="true" requiredMessage="Please select a company">
+                                <p:ajax listener="#{createStorageBinManagerBean.onChangeWarehouse}" update="storageType" />
+                                <f:selectItem itemLabel="Select Warehouse" itemValue="" noSelectionOption="true" />
+                                <f:selectItems value="#{createStorageBinManagerBean.warehouses}" var="warehouse" itemLabel="ID:#{warehouse.warehouseId}   Name:#{warehouse.name}"  itemValue="#{warehouse.warehouseId}"/>
+                            </p:selectOneMenu>
                         </p:column>
                     </p:row>
                     <p:row>
                         <p:column>
-                            <p:outputLabel for="storageBinName" style="font-weight: bold" value="Storage Bin Name :  * " />
+                            <p:outputLabel for="storageType" value="Storage Type Name: " />
                         </p:column>
                         <p:column>
-                            <p:inputText required="true" label="storageBinName" requiredMessage="StorageBin Name is required." id="storageBinName" value="#{assetManagedBean.storageBinName}">
+                            <p:selectOneMenu id="storageType" value="#{createStorageBinManagerBean.storageTypeId}"  style="width:210px" required="true" requiredMessage="Please select a company">
+                                <f:selectItem itemLabel="Select Warehouse" itemValue="" noSelectionOption="true" />
+                                <f:selectItems value="#{createStorageBinManagerBean.storageTypes}" var="storageType" itemLabel="ID:#{storageType.storageTypeId}   Name:#{storageType.name}"  itemValue="#{storageType.storageTypeId}"/>
+                            </p:selectOneMenu>
+                        </p:column>
+                    </p:row>
+                    <p:row>
+                        <p:column>
+                            <p:outputLabel for="storageBinName" style="font-weight: bold" value="Storage Bin Name :   " />
+                        </p:column>
+                        <p:column>
+                            <p:inputText required="true" label="storageBinName" requiredMessage="StorageBin Name is required." id="storageBinName" value="#{createStorageBinManagerBean.storageBinName}">
                                 <f:validateLength minimum="1" maximum="25" />
                             </p:inputText>
                         </p:column>
+                    </p:row>
+                    <p:row>
                         <p:column>
-                            <p:message for="storageBinName" />
+                            <h:outputLabel for="description" style="font-weight: bold" value="Description:   *" />
+                        </p:column>
+                        <p:column>
+                            <p:inputText required="true" label="description" requiredMessage="Description is required." id="description" value="#{createStorageBinManagerBean.storagebinDescription}">
+                                <f:validateLength minimum="1" maximum="100" />
+                            </p:inputText>
                         </p:column>
                     </p:row>  
                     <p:row>
@@ -74,26 +92,22 @@
                             <h:outputLabel for="storageBinType" style="font-weight: bold" value="Storage Bin Type:   *" />
                         </p:column>
                         <p:column>
-                            <p:inputText required="true" label="storageBinType" requiredMessage="Storage Bin Type is required." id="description" value="#{assetManagedBean.storageBinType}">
+                            <p:inputText required="true" label="storageBinType" requiredMessage="Storage Bin Type is required." id="storageBinType" value="#{createStorageBinManagerBean.storageBinType}">
                                 <f:validateLength minimum="1" maximum="100" />
                             </p:inputText>
                         </p:column>
-                        <p:column>
-                            <p:message for="storageBinType" />
-                        </p:column>
+
                     </p:row>
                     <p:row>
                         <p:column>
                             <h:outputLabel for="maxQuantity" style="font-weight: bold" value="Maximum Quantity:   *" />
                         </p:column>
                         <p:column>
-                            <p:inputText required="true" label="zipcode" requiredMessage="Maximum Quantity is required." id="maxQuantity" value="#{assetManagedBean.maxQuantity}">
+                            <p:inputText required="true" label="zipcode" requiredMessage="Maximum Quantity is required." id="maxQuantity" value="#{createStorageBinManagerBean.maxQuantity}">
                                 <f:validateLength minimum="1" maximum="19" />
                             </p:inputText>
                         </p:column>
-                        <p:column>
-                            <p:message for="maxQuantity" />
-                        </p:column>
+
                     </p:row>
 
                     <p:row>
@@ -101,32 +115,18 @@
                             <h:outputLabel for="maxWeight" style="font-weight: bold" value="Maximum Weight:   *" />
                         </p:column>
                         <p:column>
-                            <p:inputText required="true" label="maxWeight" requiredMessage="Maximum Weight is required." id="maxWeight" value="#{assetManagedBean.maxWeight}">
+                            <p:inputText required="true" label="maxWeight" requiredMessage="Maximum Weight is required." id="maxWeight" value="#{createStorageBinManagerBean.maxWeight}">
                                 <f:validateLength minimum="1" maximum="19" />
                             </p:inputText>
                         </p:column>
-                        <p:column>
-                            <p:message for="maxWeight" />
-                        </p:column>
+
                     </p:row>
 
-                    <p:row>
-                        <p:column>
-                            <h:outputLabel for="description" style="font-weight: bold" value="Description:   *" />
-                        </p:column>
-                        <p:column>
-                            <p:inputText required="true" label="description" requiredMessage="Description is required." id="description" value="#{assetManagedBean.storagebDescription}">
-                                <f:validateLength minimum="1" maximum="100" />
-                            </p:inputText>
-                        </p:column>
-                        <p:column>
-                            <p:message for="description" />
-                        </p:column>
-                    </p:row>  
+
 
                 </p:panelGrid>
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                <p:commandButton id="btn" value="Create New Storage Type" update="panel" actionListener="#{assetManagedBean.createNewStorageType}" ajax="true" />
+                <p:commandButton id="btn" value="Create New Storage Bin" update="panel" actionListener="#{createStorageBinManagerBean.createStorageBin}" ajax="true" />
             </p:panel>
 
         </h:form>
