--- a/MerlionPortal/MerlionPortal-war/web/oes/displayrequestinfor.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/displayrequestinfor.xhtml
@@ -20,7 +20,8 @@
                 </p:submenu>
                 <p:submenu label="ORDERS" >
                     <p:menuitem value="Create Order" url="pogeneration.xhtml" />
-                    <p:menuitem value="Retrieve Saved Order" url="displayallproducts.xhtml" />
+                    <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
+                    <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />
                 </p:submenu>
                 <p:submenu label="REPORTS" >
                 </p:submenu>
